package br.unitins.libray;

public class Administrador {
    
}
