package br.unitins.libray;

public class Funcionario {
    
}
