package br.unitins.libray;

public class Multa {
    
}
